--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,42 +1,50 @@
-{% set name = "jupyterlab_robotmode" %}
-{% set version = "0.3.1" %}
+{% set version = "0.4.0" %}
 
 package:
-  name: {{ name|lower }}
+  name: jupyterlab_robotmode
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: f003bb88dbd6ebd218fb8bcfd77a746a19134d18dc4a682e7e8e800323395f38
+  url: https://pypi.io/packages/source/j/jupyterlab_robotmode/jupyterlab_robotmode-{{ version }}.tar.gz
+  sha256: e6f337b87c4d4015a6edab9c902f8c412339ec479a9198d09d13a91b62370a61
 
 build:
   noarch: python
   number: 0
-  script: "{{ PYTHON }} -m pip install . -vv"
+  script: |-
+    {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   build:
-    - python >=3.6
+    - python >=3.8
     - pip
-    - nodejs
     - jupyterlab =3
     - jupyter-packaging
   run:
-    - python >=3.6
+    - python >=3.8
+    - jupyterlab >=3,<4
 
 test:
+  requires:
+    - pip
+    - m2-grep  # [win]
   commands:
-    - test -f ${PREFIX}/share/jupyter/labextensions/@marketsquare/jupyterlab_robotmode/package.json                        # [unix]
-    - if not exist %PREFIX%\\share\\jupyter\\labextensions\\@marketsquare/jupyterlab_robotmode\\package.json (exit 1)      # [win]
+    - pip check
+    - jupyter labextension list
+    - jupyter labextension list 1>labextensions 2>&1
+    - grep -iE "@marketsquare/jupyterlab_robotmode.*v{{ version }}.*OK" labextensions
 
 about:
   home: https://github.com/MarketSquare/jupyterlab_robotmode
   license: BSD-3-Clause
   license_family: BSD
-  license_file: LICENSE
+  license_file:
+    - LICENSE
+    - jupyterlab_robotmode/labextension/static/third-party-licenses.json
   summary: 'A JupyterLab extension which adds a CodeMirror mode for Robot Framework syntax'
   dev_url: https://github.com/MarketSquare/jupyterlab_robotmode
 
 extra:
   recipe-maintainers:
     - martinRenou
+    - bollwyvl
